--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
@@ -21,10 +22,20 @@
       </div>
 
       <div class="choices">
-        <div class="choice">
-          <img src="" alt="">
+        <div class="choice" id="r">
+          <img src="images/Rock.png" alt="">
+
+        </div>
+        <div class="choice" id="p">
+          <img src="images/Paper.png" alt="">
+
+        </div>
+        <div class="choice" id="s">
+          <img src="images/Scissors.png" alt="">
 
         </div>
       </div>
+
+      <p id="action-message">Make you move!</p>
   </body>
 </html>
